--- a/.github/workflows/zip-and-publish.yml
+++ b/.github/workflows/zip-and-publish.yml
@@ -18,6 +18,7 @@ jobs:
           cd ./base-filesystem && zip -r base-filesystem.zip .
       - name: Create Release
         run: |
+          gh auth login
           cd ./base-filesystem && gh release create ${{ github.ref_name}} './base-filesystem.zip'
  #     - name: Publish to nexus
  #       run: |
