--- a/.github/workflows/zip-and-publish.yml
+++ b/.github/workflows/zip-and-publish.yml
@@ -7,7 +7,15 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+    inputs:
+      release-version:
+        description: 'Release Version'
+        type: string
+        required: true
+        
+env:
+  RELEASE_VERSION: ${{ github.event.inputs.release-version || github.ref_name }}
+        
 jobs:
   zip-and-publish:
     runs-on: ubuntu-latest
@@ -18,8 +26,9 @@ jobs:
           cd ./base-filesystem && zip -r base-filesystem.zip .
       - name: Create Release
         run: |
-          gh auth login
-          cd ./base-filesystem && gh release create ${{ github.ref_name}} './base-filesystem.zip'
+          cd ./base-filesystem && gh release create ${{ env.PUBLISH_SERVER }} './base-filesystem.zip'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  #     - name: Publish to nexus
  #       run: |
  #         curl -v -F r=releases -F hasPom=false -F g=com.adaptris -F a=base-filesystem -F v=1.0.0 -F p=zip -F file=@./base-filesystem.zip -u deployment:${{ secrets.NEXUS_REPO_PASSWORD }} https://nexus.adaptris.net/nexus/service/local/artifact/maven/content
