--- a/.github/workflows/zip-and-publish.yml
+++ b/.github/workflows/zip-and-publish.yml
@@ -23,6 +23,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Git Config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
       - name: Create Tag
         if: github.event.inputs.release-version
         run: |
