--- a/.github/workflows/zip-and-publish.yml
+++ b/.github/workflows/zip-and-publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Create Tag
         if: github.event.inputs.release-version
         run: |
-          git tag -a ${{ github.event.inputs.release-version }}
+          git tag -a ${{ github.event.inputs.release-version }} -m "Add tag ${{ github.event.inputs.release-version }}"
           git push origin --tags
       - name: Zip base-filesystem
         run: |
