--- a/.github/workflows/zip-and-publish.yml
+++ b/.github/workflows/zip-and-publish.yml
@@ -40,7 +40,7 @@ jobs:
           path: interlok-templates
       - name: Zip base-filesystem-no-templates
         run: |
-          cd ./base-filesystem && zip -r base-filesystem-no-templates.zip .
+          cd ./base-filesystem && zip -r -x *.zip base-filesystem-no-templates.zip .
       - name: Copy Templates
         # Copy the templates to the base-filesystem dir but ignoring git files
         run: |
@@ -48,7 +48,7 @@ jobs:
           cp -rv `for f in ./interlok-templates/*;do echo "$f" | grep -vE "README.md|.whitesource|.git";done;` ./base-filesystem/interlok-templates/
       - name: Zip base-filesystem
         run: |
-          cd ./base-filesystem && zip -r base-filesystem.zip .
+          cd ./base-filesystem && zip -r -x *.zip base-filesystem.zip .
       - name: Create Release
         if: github.event_name != 'schedule'
         run: |
